// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render correctly when the fullWidth is true 1`] = `
Array [
  ".button-0-2-1 {
  overflow: hidden;
  position: relative;
  border-radius: 4px;
}
.button-0-2-1:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0;
  position: absolute;
  background-color: #000000;
}
.button-0-2-1:hover:not([disabled]):after {
  opacity: 0.04;
}
.button-0-2-1:focus:not([disabled]):after {
  opacity: 0.12;
}
.button-0-2-1:disabled {
  box-shadow: none;
}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  overflow: hidden;
  font-size: 14px;
  text-align: center;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 0;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  padding-left: 8px;
  padding-right: 8px;
}
.button-d0-0-2-4:disabled {
  background-color: #bbbbbb;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  color: #333333;
}
.base-0-2-7 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-7:disabled {
  cursor: default;
}
.base-d0-0-2-8 {
  height: 40px;
  width: 100%;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-7 base-d0-0-2-8 button-0-2-1 button-d0-0-2-4"
        type="button"
      >
        <span
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the size is medium 1`] = `
Array [
  ".button-0-2-1 {
  overflow: hidden;
  position: relative;
  border-radius: 4px;
}
.button-0-2-1:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0;
  position: absolute;
  background-color: #000000;
}
.button-0-2-1:hover:not([disabled]):after {
  opacity: 0.04;
}
.button-0-2-1:focus:not([disabled]):after {
  opacity: 0.12;
}
.button-0-2-1:disabled {
  box-shadow: none;
}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  overflow: hidden;
  font-size: 14px;
  text-align: center;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 0;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  padding-left: 16px;
  padding-right: 16px;
}
.button-d0-0-2-4:disabled {
  background-color: #bbbbbb;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  color: #333333;
}
.base-0-2-7 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-7:disabled {
  cursor: default;
}
.base-d0-0-2-8 {
  height: 48px;
  width: auto;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-7 base-d0-0-2-8 button-0-2-1 button-d0-0-2-4"
        type="button"
      >
        <span
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the size is semi 1`] = `
Array [
  ".button-0-2-1 {
  overflow: hidden;
  position: relative;
  border-radius: 4px;
}
.button-0-2-1:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0;
  position: absolute;
  background-color: #000000;
}
.button-0-2-1:hover:not([disabled]):after {
  opacity: 0.04;
}
.button-0-2-1:focus:not([disabled]):after {
  opacity: 0.12;
}
.button-0-2-1:disabled {
  box-shadow: none;
}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  overflow: hidden;
  font-size: 14px;
  text-align: center;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 0;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  padding-left: 4px;
  padding-right: 4px;
}
.button-d0-0-2-4:disabled {
  background-color: #bbbbbb;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  color: #333333;
}
.base-0-2-7 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-7:disabled {
  cursor: default;
}
.base-d0-0-2-8 {
  height: 32px;
  width: auto;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-7 base-d0-0-2-8 button-0-2-1 button-d0-0-2-4"
        type="button"
      >
        <span
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is contained and disabled is true 1`] = `
Array [
  ".button-0-2-1 {
  overflow: hidden;
  position: relative;
  border-radius: 4px;
}
.button-0-2-1:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0;
  position: absolute;
  background-color: #000000;
}
.button-0-2-1:hover:not([disabled]):after {
  opacity: 0.04;
}
.button-0-2-1:focus:not([disabled]):after {
  opacity: 0.12;
}
.button-0-2-1:disabled {
  box-shadow: none;
}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  overflow: hidden;
  font-size: 14px;
  text-align: center;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 0;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  padding-left: 8px;
  padding-right: 8px;
}
.button-d0-0-2-4:disabled {
  background-color: #bbbbbb;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  color: #333333;
}
.base-0-2-7 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-7:disabled {
  cursor: default;
}
.base-d0-0-2-8 {
  height: 40px;
  width: auto;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-7 base-d0-0-2-8 button-0-2-1 button-d0-0-2-4"
        disabled=""
        type="button"
      >
        <span
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is outlined 1`] = `
Array [
  ".button-0-2-1 {
  overflow: hidden;
  position: relative;
  border-radius: 4px;
}
.button-0-2-1:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0;
  position: absolute;
  background-color: #000000;
}
.button-0-2-1:hover:not([disabled]):after {
  opacity: 0.04;
}
.button-0-2-1:focus:not([disabled]):after {
  opacity: 0.12;
}
.button-0-2-1:disabled {
  box-shadow: none;
}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  overflow: hidden;
  font-size: 14px;
  text-align: center;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-4 {
  background-color: transparent;
  border: 1px solid #f4ab34;
  box-shadow: none;
  padding-left: 8px;
  padding-right: 8px;
}
.button-d0-0-2-4:disabled {
  background-color: transparent;
  border: 1px solid #bbbbbb;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  color: #333333;
}
.base-0-2-7 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-7:disabled {
  cursor: default;
}
.base-d0-0-2-8 {
  height: 40px;
  width: auto;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-7 base-d0-0-2-8 button-0-2-1 button-d0-0-2-4"
        type="button"
      >
        <span
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is outlined and is disabled 1`] = `
Array [
  ".button-0-2-1 {
  overflow: hidden;
  position: relative;
  border-radius: 4px;
}
.button-0-2-1:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0;
  position: absolute;
  background-color: #000000;
}
.button-0-2-1:hover:not([disabled]):after {
  opacity: 0.04;
}
.button-0-2-1:focus:not([disabled]):after {
  opacity: 0.12;
}
.button-0-2-1:disabled {
  box-shadow: none;
}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  overflow: hidden;
  font-size: 14px;
  text-align: center;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-4 {
  background-color: transparent;
  border: 1px solid #f4ab34;
  box-shadow: none;
  padding-left: 8px;
  padding-right: 8px;
}
.button-d0-0-2-4:disabled {
  background-color: transparent;
  border: 1px solid #bbbbbb;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  color: #777777;
}
.base-0-2-7 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-7:disabled {
  cursor: default;
}
.base-d0-0-2-8 {
  height: 40px;
  width: auto;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-7 base-d0-0-2-8 button-0-2-1 button-d0-0-2-4"
        disabled=""
        type="button"
      >
        <span
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is text 1`] = `
Array [
  ".button-0-2-1 {
  overflow: hidden;
  position: relative;
  border-radius: 4px;
}
.button-0-2-1:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0;
  position: absolute;
  background-color: #000000;
}
.button-0-2-1:hover:not([disabled]):after {
  opacity: 0.04;
}
.button-0-2-1:focus:not([disabled]):after {
  opacity: 0.12;
}
.button-0-2-1:disabled {
  box-shadow: none;
}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  overflow: hidden;
  font-size: 14px;
  text-align: center;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-4 {
  background-color: transparent;
  border: 0;
  box-shadow: none;
  padding-left: 8px;
  padding-right: 8px;
}
.button-d0-0-2-4:disabled {
  background-color: transparent;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  color: #333333;
}
.base-0-2-7 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-7:disabled {
  cursor: default;
}
.base-d0-0-2-8 {
  height: 40px;
  width: auto;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-7 base-d0-0-2-8 button-0-2-1 button-d0-0-2-4"
        type="button"
      >
        <span
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly when the variant is text and is disabled 1`] = `
Array [
  ".button-0-2-1 {
  overflow: hidden;
  position: relative;
  border-radius: 4px;
}
.button-0-2-1:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0;
  position: absolute;
  background-color: #000000;
}
.button-0-2-1:hover:not([disabled]):after {
  opacity: 0.04;
}
.button-0-2-1:focus:not([disabled]):after {
  opacity: 0.12;
}
.button-0-2-1:disabled {
  box-shadow: none;
}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  overflow: hidden;
  font-size: 14px;
  text-align: center;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-4 {
  background-color: transparent;
  border: 0;
  box-shadow: none;
  padding-left: 8px;
  padding-right: 8px;
}
.button-d0-0-2-4:disabled {
  background-color: transparent;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  color: #777777;
}
.base-0-2-7 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-7:disabled {
  cursor: default;
}
.base-d0-0-2-8 {
  height: 40px;
  width: auto;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-7 base-d0-0-2-8 button-0-2-1 button-d0-0-2-4"
        disabled=""
        type="button"
      >
        <span
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly with default props 1`] = `
Array [
  ".button-0-2-1 {
  overflow: hidden;
  position: relative;
  border-radius: 4px;
}
.button-0-2-1:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0;
  position: absolute;
  background-color: #000000;
}
.button-0-2-1:hover:not([disabled]):after {
  opacity: 0.04;
}
.button-0-2-1:focus:not([disabled]):after {
  opacity: 0.12;
}
.button-0-2-1:disabled {
  box-shadow: none;
}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  overflow: hidden;
  font-size: 14px;
  text-align: center;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 0;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  padding-left: 8px;
  padding-right: 8px;
}
.button-d0-0-2-4:disabled {
  background-color: #bbbbbb;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  color: #333333;
}
.base-0-2-7 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-7:disabled {
  cursor: default;
}
.base-d0-0-2-8 {
  height: 40px;
  width: auto;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-7 base-d0-0-2-8 button-0-2-1 button-d0-0-2-4"
        type="button"
      >
        <span
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render correctly with the given icon name 1`] = `
Array [
  ".icon-0-2-9 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-10 {
  color: #333333;
  font-size: 24px;
}
.button-0-2-1 {
  overflow: hidden;
  position: relative;
  border-radius: 4px;
}
.button-0-2-1:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0;
  position: absolute;
  background-color: #000000;
}
.button-0-2-1:hover:not([disabled]):after {
  opacity: 0.04;
}
.button-0-2-1:focus:not([disabled]):after {
  opacity: 0.12;
}
.button-0-2-1:disabled {
  box-shadow: none;
}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  overflow: hidden;
  font-size: 14px;
  text-align: center;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 0;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  padding-left: 8px;
  padding-right: 8px;
}
.button-d0-0-2-4:disabled {
  background-color: #bbbbbb;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row;
}
.label-d2-0-2-6 {
  color: #333333;
  margin-right: 8px;
}
.base-0-2-7 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-7:disabled {
  cursor: default;
}
.base-d0-0-2-8 {
  height: 40px;
  width: auto;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-7 base-d0-0-2-8 button-0-2-1 button-d0-0-2-4"
        type="button"
      >
        <span
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
          <i
            aria-hidden="true"
            class="icon-0-2-9 icon-d0-0-2-10 natds-icons natds-icons-filled-action-check"
            data-testid="icon-filled-action-check"
            role="img"
          />
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render icon to the left when the showIcon is true and iconPosition is left 1`] = `
Array [
  ".icon-0-2-9 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-10 {
  color: #333333;
  font-size: 24px;
}
.button-0-2-1 {
  overflow: hidden;
  position: relative;
  border-radius: 4px;
}
.button-0-2-1:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0;
  position: absolute;
  background-color: #000000;
}
.button-0-2-1:hover:not([disabled]):after {
  opacity: 0.04;
}
.button-0-2-1:focus:not([disabled]):after {
  opacity: 0.12;
}
.button-0-2-1:disabled {
  box-shadow: none;
}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  overflow: hidden;
  font-size: 14px;
  text-align: center;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 0;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  padding-left: 8px;
  padding-right: 8px;
}
.button-d0-0-2-4:disabled {
  background-color: #bbbbbb;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row-reverse;
}
.label-d2-0-2-6 {
  color: #333333;
  margin-left: 8px;
}
.base-0-2-7 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-7:disabled {
  cursor: default;
}
.base-d0-0-2-8 {
  height: 40px;
  width: auto;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-7 base-d0-0-2-8 button-0-2-1 button-d0-0-2-4"
        type="button"
      >
        <span
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
          <i
            aria-hidden="true"
            class="icon-0-2-9 icon-d0-0-2-10 natds-icons natds-icons-outlined-default-mockup"
            data-testid="icon-outlined-default-mockup"
            role="img"
          />
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Button component should render icon to the right as default when the showIcon is true 1`] = `
Array [
  ".icon-0-2-9 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-10 {
  color: #333333;
  font-size: 24px;
}
.button-0-2-1 {
  overflow: hidden;
  position: relative;
  border-radius: 4px;
}
.button-0-2-1:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0;
  position: absolute;
  background-color: #000000;
}
.button-0-2-1:hover:not([disabled]):after {
  opacity: 0.04;
}
.button-0-2-1:focus:not([disabled]):after {
  opacity: 0.12;
}
.button-0-2-1:disabled {
  box-shadow: none;
}
.labelContainer-0-2-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}
.label-0-2-3 {
  overflow: hidden;
  font-size: 14px;
  text-align: center;
  font-family: Roboto, sans-serif;
  font-weight: 500;
  user-select: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  letter-spacing: 1.23px;
  text-transform: uppercase;
}
.button-d0-0-2-4 {
  background-color: #f4ab34;
  border: 0;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
  padding-left: 8px;
  padding-right: 8px;
}
.button-d0-0-2-4:disabled {
  background-color: #bbbbbb;
}
.labelContainer-d1-0-2-5 {
  flex-direction: row;
}
.label-d2-0-2-6 {
  color: #333333;
  margin-right: 8px;
}
.base-0-2-7 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-7:disabled {
  cursor: default;
}
.base-d0-0-2-8 {
  height: 40px;
  width: auto;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-7 base-d0-0-2-8 button-0-2-1 button-d0-0-2-4"
        type="button"
      >
        <span
          class="labelContainer-0-2-2 labelContainer-d1-0-2-5"
        >
          <span
            class="label-0-2-3 label-d2-0-2-6"
          >
            button
          </span>
          <i
            aria-hidden="true"
            class="icon-0-2-9 icon-d0-0-2-10 natds-icons natds-icons-outlined-default-mockup"
            data-testid="icon-outlined-default-mockup"
            role="img"
          />
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`ButtonBase should render as fullWidth 1`] = `
Array [
  ".base-0-2-1 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-1:disabled {
  cursor: default;
}
.base-d0-0-2-2 {
  height: 32px;
  width: 100%;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-1 base-d0-0-2-2 undefined"
        type="button"
      >
        something
      </button>
    </div>
  </div>,
]
`;

exports[`ButtonBase should render correctly with given props 1`] = `
Array [
  ".base-0-2-1 {
  border: none;
  cursor: pointer;
  outline: 0;
}
.base-0-2-1:disabled {
  cursor: default;
}
.base-d0-0-2-2 {
  height: 32px;
  width: auto;
}",
  <div>
    <div
      data-testid="ripple"
    >
      <button
        class="base-0-2-1 base-d0-0-2-2 undefined"
        type="button"
      >
        something
      </button>
    </div>
  </div>,
]
`;
